# pycel-fork

./: COMPATIBILITY.md  LEANSIGHT_README.md  README.rst  TEST_FAILURE_ANALYSIS.md  Unknown.json  pyproject.toml  s.txt  setup.py
.github/workflows/: test.yml
model_focusing/: COMPLETE_TESTS_SUMMARY.md  CONFIGURATION_UPDATES.md  PYCEL_API_DOCUMENTATION.md  README.md  ROOT_TESTS_SUMMARY.md  TEST_RESULTS.md  VERIFIED_PYCEL_API_DOCUMENTATION.md  __init__.py  examples.py  test_documentation_verification.py  test_model_focusing_core.py  test_results.txt
src/pycel/: excelcompiler.py  excelformula.py  excelwrapper.py
tests/: test_excelcompiler.py  test_excelformula.py  test_package.py
tests/fixtures/: excelcompiler.xlsx.json
